2010-03-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m: Only use calls for
	cairo_pattern_set_extend() on cairo > 1.6.0.
	Patch suggested by Eric Wasylishen <ewasylishen@gmail.com>.

2010-03-05 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/cairo/CairoGState.m:
	* Source/gsc/GSGState.m:
	Use the -zone method rather than GSObjCZone()

2010-02-24 16:45-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/win32/WIN32Server.m: Added a boolean to control if
	callbacks are honored so that we can ignore the
	SetActiveWindow(...) call when windows are resigned.  Otherwise
	this causes some issues and could result in an inconsistent state.
	* Source/winlib/WIN32GState.m: Moved AlphaBlend to seperate
	function so that it can be called elsewhere.

2010-02-20 Fred Kiefer <FredKiefer@gmx.de>

	* Source/gsc/GSStreamContext.m
	* Headers/cairo/CairoFontInfo.h
	* Source/cairo/CairoFontInfo.m
	* Source/cairo/CairoGState.m
	* Source/winlib/WIN32FontInfo.m
	* Source/art/ftfont.m
	* Source/art/ftfont-old.m
	* Headers/xlib/GSXftFontInfo.h
	* Headers/xlib/XGFontSetFontInfo.h
	* Source/xlib/XGFontSetFontInfo.m
	* Source/xlib/GSXftFontInfo.m
	* Source/xlib/XGFont.m: Adjust to the CGFloat change for NSFont
	and NSAffineTransform done in base and gui.

2010-02-11  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Documentation/Back/GNUmakefile: Do not try including the
	non-existing GNUmakefile.local file.
	* Documentation/GNUmakefile: Same change.
	* Fonts/GNUmakefile: Same change.
	* Source/winlib/GNUmakefile: Same change.
	* Tools/GNUmakefile: Same change.

	* Fonts/GNUmakefile.postamble (before-uninstall): Remove
	back-resources_INSTALL_DIR if empty.
	
2010-02-10 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/x11/XGServerWindow.m:
	* Source/x11/XGServerEvent.m:
	* Headers/x11/XGGeneric.h: Handle horizontal scrolling events

2010-02-07 03:37-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/win32/WIN32Server.h: Remove HOTKEY method.